Added admin.html, and admin login button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <h1>Posts</h1>
+      <a href="/admin.html">Admin</a>
       <p id="status">—</p>
     </header>
     
