Added admin.js, and changed some css

--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,16 @@
     <title>Admin page</title>
 </head>
 <body>
+
+    <form id="create-form">
+        <input id="title" placeholder="Titel" required />
+        <textarea id="content" placeholder="Text" required></textarea>
+        <button type="submit">Lägg till</button>
+      </form>
+      <div id="posts"></div>
+
+
+      <script type="module" src="/src/admin.js"></script>
     
 </body>
 </html>
