--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <title>Vite Test</title>
   </head>
   <body>
+
+
     <header>
       <h1>Posts</h1>
-      <a href="/admin.html">Admin</a>
+      <a href="/admin.html" class="admin-btn">Admin</a>
       <p id="status">—</p>
     </header>
     
-    <form id="create-form">
-      <input id="title" placeholder="Titel" required />
-      <textarea id="content" placeholder="Text" required></textarea>
-      <button type="submit">Lägg till</button>
-    </form>
     <div id="posts"></div>
 
     <script type="module" src="/src/main.js"></script>
