--- a/admin.html
+++ b/admin.html
@@ -7,12 +7,18 @@
 </head>
 <body>
 
+    <header>
+        <h1>Posts</h1>
+        <p id="status">—</p>
+      </header>
+      
+      <div id="posts"></div>
+
     <form id="create-form">
         <input id="title" placeholder="Titel" required />
         <textarea id="content" placeholder="Text" required></textarea>
         <button type="submit">Lägg till</button>
       </form>
-      <div id="posts"></div>
 
 
       <script type="module" src="/src/admin.js"></script>
