Login as "admin" changes
Login as admin now takes you t admin.html, it also reveals the button to go back to admin page. Added a back button

--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,8 @@
   <header>
     <h1>Admin</h1>
     <p id="status">—</p>
+
+    <a href="index.html" class="btn">← Tillbaka</a>
   </header>
 
   <main>
