--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
+<!--index.html-->
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite Test</title>
-  </head>
-  <body>
+</head>
+<body>
+<header>
+    <h1>Posts</h1>
+    <p id="status">—</p>
+</header>
+<div id="auth">
+    <span id="user-info"></span>
+    <input id="login-name" placeholder="Admin-namn" />
+    <button id="login-btn">Logga in</button>
+    <button id="logout-btn" hidden>Logga ut</button>
+</div>
 
+<form id="create-form">
+    <input id="title" placeholder="Titel" required />
+    <textarea id="content" placeholder="Text" required></textarea>
+    <button type="submit">Lägg till</button>
+</form>
+<div id="posts"></div>
 
-    <header>
-      <h1>Posts</h1>
-      <a href="/admin.html" class="admin-btn">Admin</a>
-      <p id="status">—</p>
-    </header>
-    <div id="auth">
-        <span id="user-info"></span>
-        <input id="login-name" placeholder="Admin-namn" />
-        <button id="login-btn">Logga in</button>
-        <button id="logout-btn" hidden>Logga ut</button>
-    </div>
-
-    <form id="create-form">
-      <input id="title" placeholder="Titel" required />
-      <textarea id="content" placeholder="Text" required></textarea>
-      <button type="submit">Lägg till</button>
-    </form>
-    <div id="posts"></div>
-
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
