lagt till <div id="load-trigger" style="height: 1px;"></div> i admin.html och index.html

--- a/admin.html
+++ b/admin.html
@@ -22,6 +22,7 @@
 
 
     <div id="posts"></div>
+      <div id="load-trigger" style="height: 1px;"></div>
   </main>
 
   <script type="module" src="/src/admin.js"></script>
