--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <button type="submit">Lägg till</button>
     </form>
     <div id="posts"></div>
+    <div id="load-trigger" style="height: 1px;"></div>
 
     <script type="module" src="/src/main.js"></script>
   </body>
