--- a/admin.html
+++ b/admin.html
@@ -10,7 +10,7 @@
     <h1>Admin</h1>
     <p id="status">—</p>
 
-    <a href="index.html" class="btn">← Tillbakaaa</a>
+    <a href="index.html" class="btn">← Tillbaka</a>
   </header>
 
   <main>
