Added so you can add pictures as admin

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <form id="create-form">
       <input id="title" placeholder="Titel" required />
       <textarea id="content" placeholder="Text" required></textarea>
-      <button type="submit">Lägg</button>
+      <button type="submit">Lägg till</button>
     </form>
     <div id="posts"></div>
 
