sista ändring på .html

--- a/admin.html
+++ b/admin.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin page</title>
 </head>
 <body>
-  <header>
+<header>
     <h1>Admin</h1>
     <p id="status">—</p>
 
     <a href="index.html" class="btn">← Tillbaka</a>
-  </header>
+</header>
 
-  <main>
+<main>
     <form id="create-form">
-      <input id="title" placeholder="Titel" required />
-      <textarea id="content" placeholder="Text" required></textarea>
-      <button type="submit">Lägg till</button>
+        <input id="title" placeholder="Titel" required />
+        <textarea id="content" placeholder="Text" required></textarea>
+        <button type="submit">Lägg till</button>
     </form>
 
-
     <div id="posts"></div>
-      <div id="load-trigger" style="height: 1px;"></div>
-  </main>
+    <div id="load-trigger" style="height: 1px;"></div>
+</main>
 
-  <script type="module" src="/src/admin.js"></script>
+<script type="module" src="/src/admin.js"></script>
 </body>
 </html>
